Trying to see if adding background-attachment rule will fix the sizing issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -343,7 +343,7 @@ section.module.parallax-1 {
   }
 }
 
-@media all and (max-width: 480px) {
+@media all and (max-width: 468px) {
   html {font-size: 10px;}
   .skill_container {
     width:  100%;
@@ -358,6 +358,7 @@ section.module.parallax-1 {
     background-size: cover;
     width: 100%;
     height:  100%;
+    background-attachment:scroll;
   }
   .skill p {
     font-size:  15px;
